remoção da classe meu-nome

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="row">
               <div class="col-lg-8">
                 <p class="myself">Olá,</p>
-                <p class="myself">Eu sou <span class="meu-nome">João Santos</span></p>
+                <p class="myself">Eu sou <span>João Santos</span></p>
                 <div style="height: 100px;">
                   <p id="profissao" class="myself" ></p><span class="digitacao">_</span>
                 </div>
