--- a/index.html
+++ b/index.html
@@ -58,7 +58,10 @@
                   </a>
                   <a href="https://github.com/jcsantosgit" target="_blank" style="color: black; display: inline-block;">
                     <i class="fa fa-github" style="font-size:40px"></i>
-                  </a>            
+                  </a>     
+                  <a href="https://github.com/jcsantosgit" target="_blank" style="color: black; display: inline-block;">
+                    <i class="fa fa-youtube" style="font-size:40px"></i>
+                  </a>                         
                 </p>            
               </div>
       
