inclusão do link do canal do youtube

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                   <a href="https://github.com/jcsantosgit" target="_blank" style="color: black; display: inline-block;">
                     <i class="fa fa-github" style="font-size:40px"></i>
                   </a>     
-                  <a href="https://github.com/jcsantosgit" target="_blank" style="color: black; display: inline-block;">
+                  <a href="https://www.youtube.com/channel/UCxl2ZfAoknC03uYnLAFg9Ww" target="_blank" style="color: red; display: inline-block;">
                     <i class="fa fa-youtube" style="font-size:40px"></i>
                   </a>                         
                 </p>            
