inclusão de link do youtube no rodape

--- a/index.html
+++ b/index.html
@@ -119,6 +119,9 @@
         <a href="https://github.com/jcsantosgit" target="_blank">
           <i class="fa fa-github" style="font-size:36px"></i>
         </a>
+        <a href="https://www.youtube.com/channel/UCxl2ZfAoknC03uYnLAFg9Ww" target="_blank">
+          <i class="fa fa-youtube" style="font-size:36px"></i>
+        </a>          
       </div>
     </footer>
 
