iniciando justes no meu portifólio

--- a/portifolio.html
+++ b/portifolio.html
@@ -69,8 +69,8 @@
                     <img src="images/arquitetura-pa.PNG" alt="Automação com Ansible">
                   </div>
                   <div class="col-sx-12 col-sm-12 col-md-12 col-lg-8 col-xl-8">
-                    <h1>Automação Wordpress com Ansible</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate iste atque sunt aliquid corrupti sapiente mollitia! Optio dolorum, quod cumque perspiciatis reiciendis odio nulla. Ad minima neque voluptatem nemo voluptas.</p>
+                    <h1>Projeto Aplicado do Curso de MBA em Cloud Computing</h1>
+                    <p>Trabalho de conclusão do curso, é um projeto com exemplo de problemas do mundo real, e onde coloco em prático o conhecimento adquirido durante o curso para fornecer uma colução adequada..</p>
                     <a class="float-right" href="portifolios/02-07-2022-pa-igti.html">Continuar lendo >></a>
                   </div>
                 </div>
