iniciando post do portifolio

--- a/portifolio.html
+++ b/portifolio.html
@@ -46,22 +46,6 @@
 
           <div class="row">
 
-            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
-              <div class="item-portifolio">
-                <div class="row">
-                  <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xl-4">
-                    <img src="images/ansible-automation.jpg" alt="Automação com Ansible">
-                  </div>
-                  <div class="col col-sm-12 col-md-12 col-lg-8 col-xl-8">
-                    <h1>Automação Wordpress com Ansible</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate iste atque sunt aliquid corrupti sapiente mollitia! Optio dolorum, quod cumque perspiciatis reiciendis odio nulla. Ad minima neque voluptatem nemo voluptas.</p>
-                    <a class="float-right" href="posts/ansible-wordpress-auto.html">Continuar lendo >></a>
-                  </div>
-                </div>
-              </div>
-              </a>
-            </div>
-
             <div class="col-sx-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
               <div class="item-portifolio">
                 <div class="row">
@@ -69,9 +53,15 @@
                     <img src="images/arquitetura-pa.PNG" alt="Automação com Ansible">
                   </div>
                   <div class="col-sx-12 col-sm-12 col-md-12 col-lg-8 col-xl-8">
-                    <h1>Projeto Aplicado do Curso de MBA em Cloud Computing</h1>
-                    <p>Trabalho de conclusão do curso, é um projeto com exemplo de problemas do mundo real, e onde coloco em prático o conhecimento adquirido durante o curso para fornecer uma colução adequada..</p>
-                    <a class="float-right" href="portifolios/02-07-2022-pa-igti.html">Continuar lendo >></a>
+                    <h1>Projeto Aplicado (PA) - Curso de MBA em Cloud Computing</h1>
+                    <p>
+                      Projeto Aplicado (PA) é um trabalho de conclusão de curso. 
+                      Foi um projeto com exemplo de um problema real 
+                      baseado em uma migração de um ambiente on-premise para nuvem do Azure, 
+                      utilizando automação do processo de desenvolvimento de aplicações (CI/CD no Azure DevOps).
+                      O objetivo do projeto é colocar em prática o conhecimento adquirido durante o curso..
+                    </p>
+                    <a class="float-right" href="portifolios/04-10-2023-pa-igti.html">Continuar lendo >></a>
                   </div>
                 </div>
               </div>
