atualização da página portifolio com um novo portifolio

--- a/portifolio.html
+++ b/portifolio.html
@@ -46,20 +46,44 @@
 
           <div class="row">
 
-            <div class="col-sx-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+            <div class="col-sx-12 col-sm-12 col-md-12 col-lg-12 col-xl-12" style="border-top: 1px solid #f1f1f1;margin-top: 20px">
               <div class="item-portifolio">
                 <div class="row">
                   <div class="col col-sm-12 col-md-12 col-lg-4 col-xl-4">
                     <img src="images/arquitetura-pa.PNG" alt="Automação com Ansible">
                   </div>
                   <div class="col-sx-12 col-sm-12 col-md-12 col-lg-8 col-xl-8">
-                    <h1>Projeto Aplicado (PA) - Curso de MBA em Cloud Computing</h1>
+                    <h2>Projeto Aplicado (PA) - Curso de MBA em Cloud Computing</h2>
                     <p>
                       Projeto Aplicado (PA) é um trabalho de conclusão de curso. 
                       Foi um projeto com exemplo de um problema real 
                       baseado em uma migração de um ambiente on-premise para nuvem do Azure, 
                       utilizando automação do processo de desenvolvimento de aplicações (CI/CD no Azure DevOps).
                       O objetivo do projeto é colocar em prática o conhecimento adquirido durante o curso..
+                    </p>
+                    <a class="float-right" href="portifolios/04-10-2023-pa-igti.html">Continuar lendo >></a>
+                  </div>
+                </div>
+              </div>
+              </a>
+            </div>
+
+          </div>
+
+          <div class="row">
+
+            <div class="col-sx-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 " style="border-top: 1px solid #f1f1f1; margin-top: 20px">
+              <div class="item-portifolio">
+                <div class="row">
+                  <div class="col col-sm-12 col-md-12 col-lg-4 col-xl-4">
+                    <img src="images/meusite-portifolio.png" alt="Automação com Ansible">
+                  </div>
+                  <div class="col-sx-12 col-sm-12 col-md-12 col-lg-8 col-xl-8">
+                    <h2>Meu Site Pessoal</h2>
+                    <p>
+                      Esse site foi criado por mim e está, ainda, em processo de melhoria.
+                      Está publicado na nuvem da Oracle em uma maquina virtual, o processo 
+                      de deploy está automatizado pelo Jenkins, Docker e GitHub
                     </p>
                     <a class="float-right" href="portifolios/04-10-2023-pa-igti.html">Continuar lendo >></a>
                   </div>
