inclusão de um novo item na lista de portifolios

--- a/portifolio.html
+++ b/portifolio.html
@@ -94,9 +94,32 @@
 
           </div>
 
-        </div>
-        
+          <div class="row">
 
+            <div class="col-sx-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 " style="border-top: 1px solid #f1f1f1; margin-top: 20px">
+              <div class="item-portifolio">
+                <div class="row">
+                  <div class="col col-sm-12 col-md-12 col-lg-4 col-xl-4">
+                    <img src="images/worker-services.jpg" alt="Automação com Ansible">
+                  </div>
+                  <div class="col-sx-12 col-sm-12 col-md-12 col-lg-8 col-xl-8">
+                    <h2>.NET Core Worker Service (Envio de Email)</h2>
+                    <p>
+                      Projeto Freelance para um cliente especifico.
+                      Criação de uma aplicação em .NET Worker Service para monitorar registros
+                      em uma base de dados e realizar o envio de relatório em PDF
+                      para uma lista de usuário especificos
+                    </p>
+                    <a class="float-right" href="portifolios/04-10-2023-pa-igti.html">Continuar lendo >></a>
+                  </div>
+                </div>
+              </div>
+              </a>
+            </div>
+  
+          </div>
+
+        </div>
     </main>
     
 
