--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                      <a class="nav-link active" href="index.html">Home</a>
+                      <a class="nav-link active" href="index.html">Sobre min</a>
                     </li>                   
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                       <a class="nav-link" href="blog.html">Blog</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
                       <a class="nav-link" href="portifolio.html">Portifólio</a>
                     </li>                                           
